--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@
       <p class="title">Quick-start Instructions</p>
       <div class="shell">
         <p class="line">
+          <p>Recommended that you run the <a href="https://jekyllrb.com/docs/#prerequisites">prerequisites &rarr;</a>
+        <p class="line">
           <span class="path">~</span>
           <span class="prompt">$</span>
           <span class="command">gem install bundler jekyll</span>
